Allow trailing whitespace in our output TSV files
Pandas always outputs delimiters, even when they would be trailing
whitespace, so let's just allow it in our pre-commit hook.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
       - id: mixed-line-ending
         args: [--fix=lf]
       - id: trailing-whitespace
+        exclude: "^out/02_selecting_gene_ids"
         args: [--markdown-linebreak-ext=md]
       - id: check-executables-have-shebangs
       - id: check-merge-conflict
